fixed some issues on mobile

--- a/pitches/style.css
+++ b/pitches/style.css
@@ -179,6 +179,11 @@ textarea[class='inputText'] {
 
     .subtitle {
         padding: 0px 0px;
+        padding-left: 10px;
+    }
+    
+    .no-move {
+        padding-left: 0px;
     }
     
     .contact-info {
